Update from https://github.com/babsballetschool/website/commit/151f5e9af56867d64855e6f7df812a63f3d9c102

--- a/hoeveel.html
+++ b/hoeveel.html
@@ -48,23 +48,18 @@
 <p><strong>2e les korting</strong> = 20 %  op het laagste tarief</p>
 <p><strong>Studentenkorting</strong> = 20% (met kopie van de collegekaart)</p>
 <p>(er kan van 1 kortingsmogelijkheid gebruik worden gemaakt)</p>
-</section><section><h2 id="korte-cursus-of-project-uurindien-aangeboden">Korte cursus of Project uur.(indien aangeboden)</h2>
+</section><section><h2 id="korte-cursusindien-aangeboden">Korte cursus.(indien aangeboden)</h2>
 <ul>
 <li>Een Korte Cursus is geen onderdeel van het reguliere rooster en is vaak een kennismakings cursus. Deze duren max.12 weken en worden vooraf aangekondigd. In rooster aangeduid als KC.</li>
-<li>Het Project-uur is ingeroosterd op maandag om 19:30. vanaf september starten we met het <strong>Project 1 Moderne dans volwassenen</strong>. olv Daphne Wams.</li>
 </ul>
 <table>
 <tr><td>Korte cursus (12 lessen) t/m 17 jaar:</td><td>€  96,-</td></tr>
 <tr><td>Korte cursus (12 lessen) vanaf 18 jaar:</td><td>€ 144,-</td></tr>
 </table>
 
-<tr><td>Project uur:</td><td>t/m 17  jaar: € 48,- per project (60 min. 6 weken)</td></tr>
-
-<tr><td>Project uur:</td><td>vanaf 18 jaar: € 72,- per project (60 min. 6 weken)</td></tr>
-
-<p>De kortingen zijn niet van toepassing op de Korte Cursussen of Projecten.</p>
+<p>De kortingen zijn niet van toepassing op de Korte Cursus.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Ook kunt u gebruikmaken van <em>de Gelrepas</em>. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#97;&#x62;&#x73;&#64;&#x62;&#x61;&#x62;&#x73;&#98;&#x61;&#108;&#108;&#101;&#x74;&#x73;&#99;&#x68;&#x6f;&#111;&#108;&#x2e;&#x6e;&#x6c;">&#98;&#97;&#x62;&#x73;&#64;&#x62;&#x61;&#x62;&#x73;&#98;&#x61;&#108;&#108;&#101;&#x74;&#x73;&#99;&#x68;&#x6f;&#111;&#108;&#x2e;&#x6e;&#x6c;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Ook kunt u gebruikmaken van <em>de Gelrepas</em>. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#x61;&#98;&#115;&#x40;&#98;&#97;&#x62;&#115;&#98;&#97;&#108;&#108;&#x65;&#x74;&#115;&#99;&#104;&#x6f;&#x6f;&#108;&#46;&#x6e;&#108;">&#98;&#x61;&#98;&#115;&#x40;&#98;&#97;&#x62;&#115;&#98;&#97;&#108;&#108;&#x65;&#x74;&#115;&#99;&#104;&#x6f;&#x6f;&#108;&#46;&#x6e;&#108;</a> </p>
 </section>
         </main>
         <footer>
