--- a/kleding.html
+++ b/kleding.html
@@ -55,9 +55,13 @@
 <p><img src="resources/image/algemeen/kinderballet%20(2).JPG" alt="Kleding voorschrift Babs Balletschool"></p>
 <p><strong>Combinatie 1:</strong></p>
 <ul>
-<li>Roze ballet pak hemdmodel of spaghettibandjes met vast rokje. (bijv. de Intermezzo 3057)</li>
-<li>Roze ballet panty met voetjes.</li>
-<li>Roze leren balletschoenen   Of: </li>
+<li><p>Roze ballet pak hemdmodel of spaghettibandjes met vast rokje. (bijv. de Intermezzo 3057)</p>
+</li>
+<li><p>Roze ballet panty met voetjes.</p>
+</li>
+<li><p>Roze leren balletschoenen</p>
+<p>   Of:</p>
+</li>
 </ul>
 <p><strong>Combinatie 2:</strong></p>
 <ul>
@@ -76,16 +80,14 @@
 <li><p>Roze leren balletschoenen.</p>
 </li>
 <li><p>Zwart rokje (niet verplicht) </p>
-<p>   Of: </p>
+<p>   Of:</p>
 </li>
-<li><p><em>Combinatie 2:</em>*</p>
-</li>
-<li><p>Zwarte legging.</p>
-</li>
-<li><p>Wit hemd (strak) of wit balletpak</p>
-</li>
-<li><p>Zwarte balletschoenen</p>
-</li>
+</ul>
+<p><strong>Combinatie 2:</strong></p>
+<ul>
+<li>Zwarte legging.</li>
+<li>Wit hemd (strak) of wit balletpak</li>
+<li>Zwarte balletschoenen</li>
 </ul>
 </section><section><h1 id="ballet-vanaf-9-jaar-vanaf-b1">Ballet vanaf 9 jaar: (vanaf B1)</h1>
 <p><img src="resources/image/algemeen/Ballettieners2.JPG" alt="Kleding voorschrift Babs Balletschool"></p>
@@ -94,7 +96,7 @@
 <li>Zwart balletpak.</li>
 <li>Roze balletpanty met voetjes.</li>
 <li>Roze canvas balletschoenen met splitzool.</li>
-<li>Zwart broekje of rokje. (niet verplicht) </li>
+<li>Zwart broekje of rokje. (niet verplicht)</li>
 </ul>
 <p>Of:</p>
 <p><strong>combinatie 2:</strong></p>
@@ -146,7 +148,7 @@
 <p>(evt. personalized met je eigen naam voor €2,50 extra.)</p>
 <p>evt is ook te bestellen; cropped shirts/legging/hemd.</p>
 <p>te bestellen in zwart in diverse maten.
-bestel via <a href="mailto:&#x62;&#97;&#98;&#115;&#64;&#x62;&#x61;&#x62;&#115;&#98;&#x61;&#x6c;&#x6c;&#x65;&#x74;&#x73;&#99;&#104;&#111;&#x6f;&#108;&#46;&#x6e;&#108;">&#x62;&#97;&#98;&#115;&#64;&#x62;&#x61;&#x62;&#115;&#98;&#x61;&#x6c;&#x6c;&#x65;&#x74;&#x73;&#99;&#104;&#111;&#x6f;&#108;&#46;&#x6e;&#108;</a> </p>
+bestel via <a href="mailto:&#98;&#x61;&#x62;&#115;&#x40;&#98;&#x61;&#98;&#x73;&#98;&#97;&#108;&#108;&#101;&#x74;&#x73;&#x63;&#x68;&#111;&#111;&#108;&#46;&#110;&#108;">&#98;&#x61;&#x62;&#115;&#x40;&#98;&#x61;&#98;&#x73;&#98;&#97;&#108;&#108;&#101;&#x74;&#x73;&#x63;&#x68;&#111;&#111;&#108;&#46;&#110;&#108;</a> </p>
 </section><section><h1 id="hoe-maak-ik-een-balletknotje">Hoe maak ik een balletknotje</h1>
 <img class="inline" src="resources/image/algemeen/knotje%20maken%202jpg.jpg" alt="Kledingvoorschrift Babs Balletschool">
 
