--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
 U schrijft altijd in per dansseizoen. Het dansseizoen duurt in seizoen 21-22 ongeveer 38 weken en loopt zoveel mogelijk gelijk met een schooljaar (basis onderwijs).</p>
 <p>Een inschrijving is 1 dansseizoen geldig en loopt aan het einde van het seizoen af. U moet zich dus ieder nieuw dansseizoen weer opnieuw inschrijven.</p>
 <p>Klik hier voor het <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">inschrijfformulier</a></p>
-<p>De Korte Cursussen (12 x) &amp; Projecten (6x) worden vooraf aangekondigd. Kijk op website/instagram/facebook welke Korte Cursussen/Projecten er worden aangeboden. Voor de korte Cursussen en Projecten gelden andere tarieven.</p>
+<p>De Korte Cursussen (12 x) worden vooraf aangekondigd. Kijk op website/instagram/facebook welke Korte Cursussen/Projecten er worden aangeboden. Voor de korte Cursussen en Projecten gelden andere tarieven.</p>
 <p>voor vragen over de inschrijvingen stuurt u een mail naar: <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
 </section>
         </main>
