--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ De lessen zijn weer gestart maar instromen is zeker nog mogelijk.</p>
 </section><section><h1 id="nieuwsbrief">Nieuwsbrief</h1>
 <p><img src="resources/image/algemeen/ballet-krant.jpg" alt="Nieuwsbrief">
 Nieuwsbrief 1 is op 11 okt. per mail naar iedereen verstuurd. Heeft u deze niet of niet goed ontvangen? 
-vraag hem aan via <a href="mailto:&#98;&#97;&#98;&#115;&#x40;&#98;&#97;&#x62;&#115;&#x62;&#x61;&#108;&#x6c;&#101;&#116;&#x73;&#x63;&#x68;&#x6f;&#111;&#108;&#46;&#x6e;&#108;">&#98;&#97;&#98;&#115;&#x40;&#98;&#97;&#x62;&#115;&#x62;&#x61;&#108;&#x6c;&#101;&#116;&#x73;&#x63;&#x68;&#x6f;&#111;&#108;&#46;&#x6e;&#108;</a></p>
+vraag hem aan via <a href="mailto:&#x62;&#97;&#x62;&#x73;&#x40;&#x62;&#x61;&#x62;&#115;&#x62;&#x61;&#x6c;&#x6c;&#101;&#116;&#x73;&#99;&#104;&#111;&#x6f;&#108;&#46;&#110;&#108;">&#x62;&#97;&#x62;&#x73;&#x40;&#x62;&#x61;&#x62;&#115;&#x62;&#x61;&#x6c;&#x6c;&#101;&#116;&#x73;&#99;&#104;&#111;&#x6f;&#108;&#46;&#110;&#108;</a></p>
 </section><section><h1 id="korte-cursus-pilates">Korte Cursus Pilates</h1>
 <p><img src="resources/image/algemeen/Pilates.JPG" alt="Zomerstop bij Babs&#39;Balletschool">
 Doe ook mee met de nieuwe cursus. Instromen kan nog!</p>
@@ -48,8 +48,8 @@ Doe ook mee met de nieuwe cursus. Instromen kan nog!</p>
 </section><section><h1 id="kijk-lessen">Kijk lessen</h1>
 <p><img src="resources/image/algemeen/IMG_4566.jpg" alt="dansplezier bij Babs&#39;Balletschool"> 
  8 t/m 12 november zijn familie en vrienden van harte welkom om naar de les te komen kijken. i.v.m. de corona vragen wij 1 persoon publiek per leerling. </p>
-</section><section><h1 id="winter">Winter!</h1>
-<p><a href="resources/image/algemeen/Winter12021.JPG">Winter bij Babs&#39;Balletschool</a> 
+</section><section><h1 id="winter">Winter</h1>
+<p><img src="resources/image/algemeen/Winter12021.JPG" alt="Winter bij Babs&#39;Balletschool"> 
 op 19 december 14:30 zullen een aantal leerlingen optreden tijdens onze winterse presentatie. 
 Deze presentatie is mede mogelijk gemaakt door de Overbetuwe Doet actie en Theater De KiK.
 Voor kaartjes of een V-ticket ga je naar: <a href="https://theaterdekik.nl/agenda-voorstellingen/">https://theaterdekik.nl/agenda-voorstellingen/</a></p>
