--- a/hoeveel.html
+++ b/hoeveel.html
@@ -59,7 +59,7 @@
 
 <p>De kortingen zijn niet van toepassing op de Korte Cursus.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Ook kunt u gebruikmaken van <em>de Gelrepas</em>. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#97;&#98;&#x73;&#64;&#98;&#x61;&#x62;&#115;&#98;&#97;&#108;&#108;&#101;&#x74;&#115;&#99;&#104;&#x6f;&#x6f;&#x6c;&#x2e;&#110;&#108;">&#98;&#97;&#98;&#x73;&#64;&#98;&#x61;&#x62;&#115;&#98;&#97;&#108;&#108;&#101;&#x74;&#115;&#99;&#104;&#x6f;&#x6f;&#x6c;&#x2e;&#110;&#108;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Ook kunt u gebruikmaken van <em>de Gelrepas</em>. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#97;&#98;&#115;&#64;&#x62;&#97;&#x62;&#115;&#98;&#x61;&#x6c;&#x6c;&#101;&#x74;&#x73;&#99;&#x68;&#x6f;&#x6f;&#108;&#46;&#110;&#108;">&#x62;&#97;&#98;&#115;&#64;&#x62;&#97;&#x62;&#115;&#98;&#x61;&#x6c;&#x6c;&#101;&#x74;&#x73;&#99;&#x68;&#x6f;&#x6f;&#108;&#46;&#110;&#108;</a> </p>
 </section>
         </main>
         <footer>
