--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ De lessen zijn weer gestart maar instromen is zeker nog mogelijk.</p>
 </section><section><h1 id="nieuwsbrief">Nieuwsbrief</h1>
 <p><img src="resources/image/algemeen/ballet-krant.jpg" alt="Nieuwsbrief">
 Nieuwsbrief 1 is op 11 okt. per mail naar iedereen verstuurd. Heeft u deze niet of niet goed ontvangen? 
-vraag hem aan via <a href="mailto:&#x62;&#97;&#x62;&#x73;&#x40;&#x62;&#x61;&#98;&#x73;&#98;&#x61;&#108;&#x6c;&#x65;&#116;&#x73;&#99;&#x68;&#111;&#111;&#108;&#46;&#110;&#108;">&#x62;&#97;&#x62;&#x73;&#x40;&#x62;&#x61;&#98;&#x73;&#98;&#x61;&#108;&#x6c;&#x65;&#116;&#x73;&#99;&#x68;&#111;&#111;&#108;&#46;&#110;&#108;</a></p>
+vraag hem aan via <a href="mailto:&#x62;&#x61;&#x62;&#115;&#64;&#98;&#x61;&#x62;&#115;&#98;&#x61;&#108;&#x6c;&#x65;&#116;&#x73;&#99;&#x68;&#111;&#111;&#x6c;&#46;&#x6e;&#x6c;">&#x62;&#x61;&#x62;&#115;&#64;&#98;&#x61;&#x62;&#115;&#98;&#x61;&#108;&#x6c;&#x65;&#116;&#x73;&#99;&#x68;&#111;&#111;&#x6c;&#46;&#x6e;&#x6c;</a></p>
 </section><section><h1 id="korte-cursus-pilates">Korte Cursus Pilates</h1>
 <p><img src="resources/image/algemeen/Pilates.JPG" alt="Zomerstop bij Babs&#39;Balletschool">
 Doe ook mee met de nieuwe cursus. Instromen kan nog!</p>
