Update from https://github.com/babsballetschool/website/commit/2f517f107e82eb2a00651c7776c22e5bb7163cb6

--- a/index.html
+++ b/index.html
@@ -35,29 +35,27 @@
             <div class="where"><span>home</span></div>
             <section><h1 id="seizoen-2122">Seizoen &#39;21/&#39;22</h1>
 <p><img src="resources/image/algemeen/Ballet%20gevorderden.JPG" alt="dansplezier bij Babs&#39;Balletschool"> 
-De lessen zijn weer gestart maar instromen is zeker nog mogelijk.</p>
+Gelukkig mogen we weer dansen in de studio. Fijn om jullie weer te verwelkomen! 
+Wil je ook een keer ervaren hoe leuk dansen is? Doe een gratis proefles. Instromen is mogelijk. </p>
 <p>Vraag een gratis proefles aan via <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
 </section><section><h1 id="nieuwsbrief">Nieuwsbrief</h1>
 <p><img src="resources/image/algemeen/ballet-krant.jpg" alt="Nieuwsbrief">
-Nieuwsbrief 1 is op 11 okt. per mail naar iedereen verstuurd. Heeft u deze niet of niet goed ontvangen? 
-vraag hem aan via <a href="mailto:&#x62;&#x61;&#x62;&#115;&#64;&#98;&#x61;&#x62;&#115;&#98;&#x61;&#108;&#x6c;&#x65;&#116;&#x73;&#99;&#x68;&#111;&#111;&#x6c;&#46;&#x6e;&#x6c;">&#x62;&#x61;&#x62;&#115;&#64;&#98;&#x61;&#x62;&#115;&#98;&#x61;&#108;&#x6c;&#x65;&#116;&#x73;&#99;&#x68;&#111;&#111;&#x6c;&#46;&#x6e;&#x6c;</a></p>
-</section><section><h1 id="korte-cursus-pilates">Korte Cursus Pilates</h1>
-<p><img src="resources/image/algemeen/Pilates.JPG" alt="Zomerstop bij Babs&#39;Balletschool">
-Doe ook mee met de nieuwe cursus. Instromen kan nog!</p>
-<p>Maandag :10:45  <strong>Pilates les</strong> voor volwassenen   </p>
-</section><section><h1 id="kijk-lessen">Kijk lessen</h1>
-<p><img src="resources/image/algemeen/IMG_4566.jpg" alt="dansplezier bij Babs&#39;Balletschool"> 
- 8 t/m 12 november zijn familie en vrienden van harte welkom om naar de les te komen kijken. i.v.m. de corona vragen wij 1 persoon publiek per leerling. </p>
-</section><section><h1 id="winter">Winter</h1>
-<p><img src="resources/image/algemeen/Winter12021.JPG" alt="Winter bij Babs&#39;Balletschool"> 
-op 19 december 14:30 zullen een aantal leerlingen optreden tijdens onze winterse presentatie. 
-Deze presentatie is mede mogelijk gemaakt door de Overbetuwe Doet actie en Theater De KiK.
-Voor kaartjes of een V-ticket ga je naar: <a href="https://theaterdekik.nl/agenda-voorstellingen/">https://theaterdekik.nl/agenda-voorstellingen/</a></p>
+<strong>Nieuwsbrief 2 is op 16 januari j.l</strong> per mail naar iedereen verstuurd. Heeft u deze niet of niet goed ontvangen? 
+vraag hem aan via <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
+</section><section><h1 id="peuter-danscursus">Peuter danscursus</h1>
+<p><img src="resources/image/algemeen/Peuterdans.JPG" alt="Peuterdans bij Babs Balletschool">
+Maandag 10:00 uur
+Voor de kleinste dansertjes vanaf 2 jaar hebben we een korte cursus (12x) Peuterdans, op maandagochtend dansen zij samen met een ouder of grootouder door de zaal. Behalve dat het erg leuk en gezond is, is het ook goed voor de coordinatie en motorische ontwikkeling en leren de kindjes over muziek, samen dansen en zichzelf ontdekken.
+Gestart op 17 januari; instromen is nog mogelijk! </p>
 </section><section><h1 id="corona-virus">Corona Virus</h1>
 <p><img src="resources/image/algemeen/Babs%20Balletschool%20spitzen%20lessen.jpg" alt="dansplezier bij Babs Balletschool">
-Vanaf 25 september hoeven we geen 1,5 meter afstand meer te houden maar we houden het virus wel graag weg uit de studio, blijf dus a.u.b.thuis als je klachten hebt.<br>We hanteren de Corona maatregelen, ook bij ons moet iedereen van 18 jaar en ouder bij binnenkomst een QR coronacheck tonen. Wij zorgen voor ventilatie, een gedesinfecteerde barre, en desinfecterende handgel.
+In de dansstudio hoeven we geen 1,5 meter afstand meer te houden maar we houden het virus wel graag weg uit de studio, blijf dus a.u.b. thuis als je klachten hebt.<br>We hanteren de Corona maatregelen, ook bij ons moet iedereen van 18 jaar en ouder bij binnenkomst een QR coronacheck tonen. Wij zorgen voor ventilatie, een gedesinfecteerde barre, en desinfecterende handgel.
 Zo houden we het samen gezond en gezellig. 
 Bedankt en tot dans! </p>
+</section><section><h1 id="carnaval">Carnaval</h1>
+<p><img src="resources/image/algemeen/kindercarnaval.JPG" alt="Carnaval bij Babs&#39;Balletschool"> 
+In de week van <strong>21 t/m 25 februari</strong> mogen de leerlingen ivm de Carnaval <strong>verkleed</strong> naar de les komen. De leerlingen mogen dan ook een zelf gemaakte dans laten zien in de les. 
+<strong>28 februari t/m 4 maart is het Carnavalsvakantie</strong>. Er zijn dan geen lessen. </p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs&#39;Balletschool"> 
  Typ deze code in op je toetsenbord:  ⬆⬆⬇⬇⬅➡⬅➡ ba    </p>
