--- a/contact.html
+++ b/contact.html
@@ -38,10 +38,11 @@
 <img src="resources/image/algemeen/ballerina%20aan%20de%20telefoon.jpg" alt="dansplezier bij Babs Balletschool"></p>
 <p>Mail naar <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
 </section><section><h1 id="proeflesproefles-bij-babs-balletschool">Proefles<img src="resources/image/algemeen/balletstudio.JPG" alt="proefles bij Babs Balletschool"></h1>
-<p>Een 1e proefles is altijd GRATIS kom een keer vrijblijvend meedoen of kijken in de dansstudio van de Theater de KiK, Dorpsstraat 39 te Elst.</p>
+<p>De proefles is altijd gratis, kom een keer vrijblijvend meedoen of kijken in de dansstudio van de Theater de KiK, Dorpsstraat 39 te Elst.</p>
 </section><section><h1 id="inschrijven">Inschrijven?</h1>
 <p><img src="resources/image/algemeen/pencil.jpg" alt="dansplezier bij Babs Balletschool">
-U schrijft altijd in per dansseizoen. Het dansseizoen duurt in seizoen 21-22 ongeveer 38 weken en loopt zoveel mogelijk gelijk met een schooljaar (basis onderwijs).</p>
+U schrijft altijd in per dansseizoen. Het dansseizoen duurt in seizoen 21-22 ongeveer 38 weken en loopt zoveel mogelijk gelijk met een schooljaar (basis onderwijs).
+Instromen in een seizoen kan ook, u betaalt dan vanaf moment van 1e les.</p>
 <p>Een inschrijving is 1 dansseizoen geldig en loopt aan het einde van het seizoen af. U moet zich dus ieder nieuw dansseizoen weer opnieuw inschrijven.</p>
 <p>Klik hier voor het <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">inschrijfformulier</a></p>
 <p>De Korte Cursussen (12 x) worden vooraf aangekondigd. Kijk op website/instagram/facebook welke Korte Cursussen/Projecten er worden aangeboden. Voor de korte Cursussen en Projecten gelden andere tarieven.</p>
