--- a/hoeveel.html
+++ b/hoeveel.html
@@ -59,7 +59,7 @@
 
 <p>De kortingen zijn niet van toepassing op de Korte Cursus.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Ook kunt u gebruikmaken van <em>de Gelrepas</em>. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#97;&#98;&#x73;&#x40;&#98;&#x61;&#x62;&#x73;&#x62;&#97;&#x6c;&#108;&#x65;&#x74;&#115;&#99;&#104;&#111;&#x6f;&#108;&#x2e;&#110;&#x6c;">&#98;&#97;&#98;&#x73;&#x40;&#98;&#x61;&#x62;&#x73;&#x62;&#97;&#x6c;&#108;&#x65;&#x74;&#115;&#99;&#104;&#111;&#x6f;&#108;&#x2e;&#110;&#x6c;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Ook kunt u gebruikmaken van <em>de Gelrepas</em>. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#x61;&#x62;&#x73;&#64;&#x62;&#x61;&#x62;&#115;&#x62;&#97;&#x6c;&#108;&#x65;&#x74;&#115;&#99;&#104;&#111;&#111;&#108;&#46;&#110;&#108;">&#x62;&#x61;&#x62;&#x73;&#64;&#x62;&#x61;&#x62;&#115;&#x62;&#97;&#x6c;&#108;&#x65;&#x74;&#115;&#99;&#104;&#111;&#111;&#108;&#46;&#110;&#108;</a> </p>
 </section>
         </main>
         <footer>
