Update from https://github.com/babsballetschool/website/commit/08587f6d99c1f680edab81178cf7269fd7c733cd

--- a/index.html
+++ b/index.html
@@ -35,27 +35,30 @@
             <div class="where"><span>home</span></div>
             <section><h1 id="seizoen-2122">Seizoen &#39;21/&#39;22</h1>
 <p><img src="resources/image/algemeen/Ballet%20gevorderden.JPG" alt="dansplezier bij Babs&#39;Balletschool"> 
-Gelukkig mogen we weer dansen in de studio. Fijn om jullie weer te verwelkomen! 
-Wil je ook een keer ervaren hoe leuk dansen is? Doe een gratis proefles. Instromen is mogelijk. </p>
+Gelukkig mogen we weer vertrouwd dansen in de studio.<br>Wil je ook een keer ervaren hoe leuk dansen is? Doe een gratis proefles. Instromen is mogelijk. </p>
 <p>Vraag een gratis proefles aan via <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
 </section><section><h1 id="nieuwsbrief">Nieuwsbrief</h1>
 <p><img src="resources/image/algemeen/ballet-krant.jpg" alt="Nieuwsbrief">
-<strong>Nieuwsbrief 2 is op 16 januari j.l</strong> per mail naar iedereen verstuurd. Heeft u deze niet of niet goed ontvangen? 
-vraag hem aan via <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
+<strong>Nieuwsbrief 2 is op 29-3-22</strong> per mail naar iedereen verstuurd. Heeft u deze niet of niet goed ontvangen? 
+vraag hem aan via <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a> De nieuwsbrief hangt ook op het prikbord in de kleedkamer. </p>
 </section><section><h1 id="peuter-danscursus">Peuter danscursus</h1>
 <p><img src="resources/image/algemeen/Peuterdans.JPG" alt="Peuterdans bij Babs Balletschool">
-Maandag 10:00 uur
-Voor de kleinste dansertjes vanaf 2 jaar hebben we een korte cursus (12x) Peuterdans, op maandagochtend dansen zij samen met een ouder of grootouder door de zaal. Behalve dat het erg leuk en gezond is, is het ook goed voor de coordinatie en motorische ontwikkeling en leren de kindjes over muziek, samen dansen en zichzelf ontdekken.
-Gestart op 17 januari; instromen is nog mogelijk! </p>
-</section><section><h1 id="corona-virus">Corona Virus</h1>
-<p><img src="resources/image/algemeen/Babs%20Balletschool%20spitzen%20lessen.jpg" alt="dansplezier bij Babs Balletschool">
-In de dansstudio hoeven we geen 1,5 meter afstand meer te houden maar we houden het virus wel graag weg uit de studio, blijf dus a.u.b. thuis als je klachten hebt.<br>We hanteren de Corona maatregelen, ook bij ons moet iedereen van 18 jaar en ouder bij binnenkomst een QR coronacheck tonen. Wij zorgen voor ventilatie, een gedesinfecteerde barre, en desinfecterende handgel.
-Zo houden we het samen gezond en gezellig. 
-Bedankt en tot dans! </p>
-</section><section><h1 id="carnaval">Carnaval</h1>
-<p><img src="resources/image/algemeen/kindercarnaval.JPG" alt="Carnaval bij Babs&#39;Balletschool"> 
-In de week van <strong>21 t/m 25 februari</strong> mogen de leerlingen ivm de Carnaval <strong>verkleed</strong> naar de les komen. De leerlingen mogen dan ook een zelf gemaakte dans laten zien in de les. 
-<strong>28 februari t/m 4 maart is het Carnavalsvakantie</strong>. Er zijn dan geen lessen. </p>
+Maandagen 10:00 uur
+De kleinste dansertjes vanaf 2 jaar sluiten het 2e blok Peuterdans af op 25 april.Vanaf 16 mei starten we een laatste blokje Peuterdans voor de zomervakantie (6 x) 
+Ook interesse om met uw kleintje te dansen? doe een gratis proefles, aanmelden via: <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a>
+De oudste peuters stromen door naar het kleuterballet. </p>
+</section><section><p>#&#39;Stuif es in&#39;<img src="resources/image/algemeen/Stuif%20es%20in%20-%20kopie.png" alt="Stuif es in bij Babs Balletschool">
+van 11 t/m 15 april zijn er &#39;Stuif es in&#39;lessen. Leerlingen mogen dan een vriend/vriendin meenemen om mee te dansen en hen laten ervaren hoe leuk het is om te dansen! </p>
+</section><section><h1 id="project-pilatespilates-bij-babs-balletschool">Project Pilates<img src="resources/image/algemeen/Pilates.JPG" alt="Pilates bij Babs Balletschool"></h1>
+<p>Donderdagen 18:30
+bij voldoende aanmeldingen starten we een Project (6x) Pilates, 
+een perfecte manier om kennis te maken met de stijl die perfect aansluit op een dansles of je inzicht geeft in je eigen lijf.
+Versterk je core, stabiliteit en flexibiliteit door oefeningen op een mat onder begeleiding van Britt. 
+aanmelden kan via: <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
+</section><section><h1 id="mei-vakantie-voorjaar-bij-babs-balletschool">Mei vakantie <img src="resources/image/algemeen/meivakantie.jpg" alt="voorjaar bij Babs Balletschool"></h1>
+<p>deze mei vakantie loopt iets anders dan de schoolvakantie.
+van 2 t/m 13 mei is het mei vakantie. 
+de lessen van Britt gaan in de week van 9 t/m 15 mei wél door. Zij haalt dan haar lessen in die in spetember uitvielen. </p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs&#39;Balletschool"> 
  Typ deze code in op je toetsenbord:  ⬆⬆⬇⬇⬅➡⬅➡ ba    </p>
