--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             <section><h1 id="seizoen-2122">Seizoen &#39;21/&#39;22</h1>
 <p><img src="resources/image/algemeen/Ballet%20gevorderden.JPG" alt="dansplezier bij Babs&#39;Balletschool"> 
 Gelukkig mogen we weer vertrouwd dansen in de studio.<br>Wil je ook een keer ervaren hoe leuk dansen is? Doe een gratis proefles. Instromen is mogelijk. </p>
-<p>Vraag een gratis proefles aan via <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
+<p>Vraag een gratis proefles of informatie aan via <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a>
+Meteen inschrijven voor een les? <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">inschrijfformulier</a></p>
 </section><section><h1 id="nieuwsbrief">Nieuwsbrief</h1>
 <p><img src="resources/image/algemeen/ballet-krant.jpg" alt="Nieuwsbrief">
 <strong>Nieuwsbrief 2 is op 29-3-22</strong> per mail naar iedereen verstuurd. Heeft u deze niet of niet goed ontvangen? 
@@ -47,7 +48,8 @@ Maandagen 10:00 uur
 De kleinste dansertjes vanaf 2 jaar sluiten het 2e blok Peuterdans af op 25 april.Vanaf 16 mei starten we een laatste blokje Peuterdans voor de zomervakantie (6 x) 
 Ook interesse om met uw kleintje te dansen? doe een gratis proefles, aanmelden via: <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a>
 De oudste peuters stromen door naar het kleuterballet. </p>
-</section><section><p>#&#39;Stuif es in&#39;<img src="resources/image/algemeen/Stuif%20es%20in%20-%20kopie.png" alt="Stuif es in bij Babs Balletschool">
+</section><section><h1 id="stuif-es-in">Stuif es in</h1>
+<p><img src="resources/image/algemeen/Stuif%20es%20in%20-%20kopie.png" alt="Stuif es in bij Babs Balletschool">
 van 11 t/m 15 april zijn er &#39;Stuif es in&#39;lessen. Leerlingen mogen dan een vriend/vriendin meenemen om mee te dansen en hen laten ervaren hoe leuk het is om te dansen! </p>
 </section><section><h1 id="project-pilatespilates-bij-babs-balletschool">Project Pilates<img src="resources/image/algemeen/Pilates.JPG" alt="Pilates bij Babs Balletschool"></h1>
 <p>Donderdagen 18:30
