--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@ De oudste peuters stromen door naar het kleuterballet. </p>
 <p><img src="resources/image/algemeen/Stuif%20es%20in%20-%20kopie.png" alt="Stuif es in bij Babs Balletschool">
 van 11 t/m 15 april zijn er &#39;Stuif es in&#39;lessen. Leerlingen mogen dan een vriend/vriendin meenemen om mee te dansen en hen laten ervaren hoe leuk het is om te dansen! </p>
 </section><section><h1 id="project-pilatespilates-bij-babs-balletschool">Project Pilates<img src="resources/image/algemeen/Pilates.JPG" alt="Pilates bij Babs Balletschool"></h1>
-<p>Donderdagen 18:30
+<p>vanaf 14 april Donderdagen 18:30
 bij voldoende aanmeldingen starten we een Project (6x) Pilates, 
-een perfecte manier om kennis te maken met de stijl die perfect aansluit op een dansles of je inzicht geeft in je eigen lijf.
+een fijne manier om kennis te maken met een training die perfect aansluit op je dansles en je inzicht geeft in je eigen lijf.
 Versterk je core, stabiliteit en flexibiliteit door oefeningen op een mat onder begeleiding van Britt. 
 aanmelden kan via: <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
 </section><section><h1 id="mei-vakantie-voorjaar-bij-babs-balletschool">Mei vakantie <img src="resources/image/algemeen/meivakantie.jpg" alt="voorjaar bij Babs Balletschool"></h1>
