Update from https://github.com/babsballetschool/website/commit/56d7d55a729aaa3f0f6982452972848132c9811a

--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
             <div class="where"><span>home</span></div>
             <section><h1 id="seizoen-2122">Seizoen &#39;21/&#39;22</h1>
 <p><img src="resources/image/algemeen/Ballet%20gevorderden.JPG" alt="dansplezier bij Babs&#39;Balletschool"> 
-Gelukkig mogen we weer vertrouwd dansen in de studio.<br>Wil je ook een keer ervaren hoe leuk dansen is? Doe een gratis proefles. Instromen is mogelijk. </p>
-<p>Vraag een gratis proefles of informatie aan via <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a>
-Meteen inschrijven voor een les? <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">inschrijfformulier</a></p>
+Gelukkig mogen we weer vertrouwd dansen in de studio.<br>Wil je ook een keer ervaren hoe leuk dansen is?
+Doe een gratis proefles. Instromen is mogelijk. </p>
+<p>Vraag een gratis proefles of informatie aan via <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
+<p>Meteen inschrijven voor een les? <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">inschrijfformulier</a></p>
 </section><section><h1 id="nieuwsbrief">Nieuwsbrief</h1>
 <p><img src="resources/image/algemeen/ballet-krant.jpg" alt="Nieuwsbrief">
 <strong>Nieuwsbrief 2 is op 29-3-22</strong> per mail naar iedereen verstuurd. Heeft u deze niet of niet goed ontvangen? 
