--- a/hoeveel.html
+++ b/hoeveel.html
@@ -59,7 +59,7 @@
 
 <p>De kortingen zijn niet van toepassing op de Korte Cursus.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Ook kunt u gebruikmaken van <em>de Gelrepas</em>. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#x61;&#98;&#x73;&#64;&#98;&#97;&#98;&#x73;&#98;&#x61;&#x6c;&#108;&#x65;&#116;&#115;&#x63;&#104;&#111;&#111;&#108;&#46;&#x6e;&#108;">&#98;&#x61;&#98;&#x73;&#64;&#98;&#97;&#98;&#x73;&#98;&#x61;&#x6c;&#108;&#x65;&#116;&#115;&#x63;&#104;&#111;&#111;&#108;&#46;&#x6e;&#108;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Ook kunt u gebruikmaken van <em>de Gelrepas</em>. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#x61;&#x62;&#115;&#x40;&#98;&#x61;&#98;&#x73;&#x62;&#97;&#108;&#x6c;&#x65;&#x74;&#x73;&#99;&#104;&#x6f;&#x6f;&#x6c;&#46;&#110;&#x6c;">&#98;&#x61;&#x62;&#115;&#x40;&#98;&#x61;&#98;&#x73;&#x62;&#97;&#108;&#x6c;&#x65;&#x74;&#x73;&#99;&#104;&#x6f;&#x6f;&#x6c;&#46;&#110;&#x6c;</a> </p>
 </section>
         </main>
         <footer>
