Update from https://github.com/babsballetschool/website/commit/64df61fb367d4a32c0e77b27cc0aed5bcddeaa38

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ vraag hem aan via <a href="mailto:babs@babsballetschool.nl">babs@babsballetschoo
 </section><section><h1 id="peuter-danscursus">Peuter danscursus</h1>
 <p><img src="resources/image/algemeen/Peuterdans.JPG" alt="Peuterdans bij Babs Balletschool">
 Maandagen 10:00 uur
-De kleinste dansertjes vanaf 2 jaar sluiten het 2e blok Peuterdans af op 25 april.Vanaf 16 mei starten we een laatste blokje Peuterdans voor de zomervakantie (6 x) 
+De kleinste dansertjes vanaf 2 jaar sluiten het 2e blok Peuterdans af op 25 april. Vanaf 16 mei starten we een laatste blokje Peuterdans voor de zomervakantie (6 x) 
 Ook interesse om met uw kleintje te dansen? doe een gratis proefles, aanmelden via: <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a>
 De oudste peuters stromen door naar het kleuterballet. </p>
 </section><section><h1 id="stuif-es-in">Stuif es in</h1>
@@ -54,14 +54,16 @@ De oudste peuters stromen door naar het kleuterballet. </p>
 van 11 t/m 15 april zijn er &#39;Stuif es in&#39;lessen. Leerlingen mogen dan een vriend/vriendin meenemen om mee te dansen en hen laten ervaren hoe leuk het is om te dansen! </p>
 </section><section><h1 id="project-pilatespilates-bij-babs-balletschool">Project Pilates<img src="resources/image/algemeen/Pilates.JPG" alt="Pilates bij Babs Balletschool"></h1>
 <p>vanaf 14 april Donderdagen 18:30
-bij voldoende aanmeldingen starten we een Project (6x) Pilates, 
+Project (6x) Pilates is opgestart en met groot succes! 
 een fijne manier om kennis te maken met een training die perfect aansluit op je dansles en je inzicht geeft in je eigen lijf.
-Versterk je core, stabiliteit en flexibiliteit door oefeningen op een mat onder begeleiding van Britt. 
-aanmelden kan via: <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
+Versterk je core, stabiliteit en flexibiliteit door oefeningen op een mat onder begeleiding van Britt. </p>
+</section><section><h1 id="koningsdag">Koningsdag</h1>
+<p>Koningsdag<img src="resources/image/algemeen/koninginnedag.jpg" alt="Koningsdag bij Babs Balletschool">
+25 t/m 29 april zijn er gewoon lessen, alleen Koningsdag is een vrije dag. Veel plezier allemaal! </p>
 </section><section><h1 id="mei-vakantie-voorjaar-bij-babs-balletschool">Mei vakantie <img src="resources/image/algemeen/meivakantie.jpg" alt="voorjaar bij Babs Balletschool"></h1>
-<p>deze mei vakantie loopt iets anders dan de schoolvakantie.
+<p>deze mei vakantie loopt iets anders dan de schoolvakantie!
 van 2 t/m 13 mei is het mei vakantie. 
-de lessen van Britt gaan in de week van 9 t/m 15 mei wél door. Zij haalt dan haar lessen in die in spetember uitvielen. </p>
+de inhaallessen van Britt/Daphne en Sarah gaan in de week van 9 t/m 15 mei wél door. </p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs&#39;Balletschool"> 
  Typ deze code in op je toetsenbord:  ⬆⬆⬇⬇⬅➡⬅➡ ba    </p>
