Update from https://github.com/babsballetschool/website/commit/de136094adcdb8089f3f264789547f1038d699aa

--- a/wanneer.html
+++ b/wanneer.html
@@ -48,13 +48,13 @@
 <p><strong>Herfstvakantie</strong>       25 t/m 29 oktober 2021
 (in de vakantie zijn er geen lessen)</p>
 <p> <strong>Kijk-lessen</strong>         8 t/m 12 november 2021<br>(familie en vrienden kunnen een les komen bekijken)</p>
-<p><strong>Winter Voorstelling</strong>  zondag 19 december 2021<br>(kleine voorstelling in theater de Kik met een aantal groepen) </p>
+<p><strong>Winter Voorstelling</strong>  zondag 19 december 2021      <em>geannuleerd ivm Corona maatregelen.</em><br>(kleine voorstelling in theater de Kik met een aantal groepen) </p>
 <p><strong>Kerstvakantie</strong>         24 december 2021 t/m 7 januari 2022<br>(in de vakantie zijn er geen lessen)</p>
 <p> <strong>Verkleed lessen</strong>      21 t/ 25 februari 2022<br>(Kom verkleed naar de lessen deze week!)</p>
 <p> <strong>Carnavalsvakantie</strong>    28 februari t/m 4 maart 2022<br>(in de vakantie zijn er geen lessen)</p>
 <p><strong>2e Paasdag</strong>            maandag 18 april 2022<br>(dit is een vrije dag, er zijn geen lessen) </p>
 <p><strong>Koningsdag</strong>            woensdag 27 april 2022<br>(dit is een vrije dag, er zijn geen lessen) </p>
-<p><strong>Meivakantie</strong>            2 t/m 13 mei 2022<br>(in de vakantie zijn er geen lessen)</p>
+<p><strong>Meivakantie</strong>            2 t/m 13 mei 2022<br>(in de vakantie zijn er geen lessen, Britt, Sarah en Daphne zullen in die week hun gemiste lessen inhalen) </p>
 <p><strong>Kijk-lessen</strong>           30 mei t/m 3 juni 2022<br>(familie en vrienden kunnen een les komen bekijken)</p>
 <p><strong>2e Pinksterdag</strong>        maandag 6 juni 2022<br>(dit is een vrije dag, er zijn geen lessen) </p>
 <p><strong>Orientatie weken</strong>      27 juni t/m 8 juli 2022<br>(Kinderen uit de K4 groepen (diploma groep) mogen in andere lessen orienteren welke dansstijl zij volgend seizoen willen kiezen)</p>
