--- a/wanneer.html
+++ b/wanneer.html
@@ -54,7 +54,7 @@
 <p> <strong>Carnavalsvakantie</strong>    28 februari t/m 4 maart 2022<br>(in de vakantie zijn er geen lessen)</p>
 <p><strong>2e Paasdag</strong>            maandag 18 april 2022<br>(dit is een vrije dag, er zijn geen lessen) </p>
 <p><strong>Koningsdag</strong>            woensdag 27 april 2022<br>(dit is een vrije dag, er zijn geen lessen) </p>
-<p><strong>Meivakantie</strong>            2 t/m 13 mei 2022<br>(in de vakantie zijn er geen lessen, Britt, Sarah en Daphne zullen in die week hun gemiste lessen inhalen) </p>
+<p><strong>Meivakantie</strong>            2 t/m 13 mei 2022<br>(in de vakantie zijn er geen reguliere lessen, Britt, Sarah en Daphne zullen in de week van 9 t/m 13 mei hun gemiste lessen inhalen) </p>
 <p><strong>Kijk-lessen</strong>           30 mei t/m 3 juni 2022<br>(familie en vrienden kunnen een les komen bekijken)</p>
 <p><strong>2e Pinksterdag</strong>        maandag 6 juni 2022<br>(dit is een vrije dag, er zijn geen lessen) </p>
 <p><strong>Orientatie weken</strong>      27 juni t/m 8 juli 2022<br>(Kinderen uit de K4 groepen (diploma groep) mogen in andere lessen orienteren welke dansstijl zij volgend seizoen willen kiezen)</p>
