--- a/kleding.html
+++ b/kleding.html
@@ -148,7 +148,7 @@
 <p>(evt. personalized met je eigen naam voor €2,50 extra.)</p>
 <p>evt is ook te bestellen; cropped shirts/legging/hemd.</p>
 <p>te bestellen in zwart in diverse maten.
-bestel via <a href="mailto:&#98;&#x61;&#98;&#115;&#x40;&#98;&#x61;&#x62;&#115;&#x62;&#97;&#108;&#108;&#x65;&#116;&#x73;&#99;&#x68;&#111;&#x6f;&#108;&#46;&#110;&#x6c;">&#98;&#x61;&#98;&#115;&#x40;&#98;&#x61;&#x62;&#115;&#x62;&#97;&#108;&#108;&#x65;&#116;&#x73;&#99;&#x68;&#111;&#x6f;&#108;&#46;&#110;&#x6c;</a> </p>
+bestel via <a href="mailto:&#98;&#x61;&#98;&#115;&#x40;&#98;&#97;&#x62;&#115;&#98;&#97;&#108;&#x6c;&#101;&#116;&#x73;&#99;&#104;&#111;&#111;&#x6c;&#x2e;&#110;&#108;">&#98;&#x61;&#98;&#115;&#x40;&#98;&#97;&#x62;&#115;&#98;&#97;&#108;&#x6c;&#101;&#116;&#x73;&#99;&#104;&#111;&#111;&#x6c;&#x2e;&#110;&#108;</a> </p>
 </section><section><h1 id="hoe-maak-ik-een-balletknotje">Hoe maak ik een balletknotje</h1>
 <img class="inline" src="resources/image/algemeen/knotje%20maken%202jpg.jpg" alt="Kledingvoorschrift Babs Balletschool">
 
