--- a/wie.html
+++ b/wie.html
@@ -45,7 +45,7 @@ In Elst begon mijn loopbaan in 1998 bij de toenmalige balletschool &#39;Dans-Ann
 <p>Dansen is voor mij een liefde, en ook een soort fijne verslaving die bij mij nooit is overgegaan. Ik hoop dat ik mijn dansleerlingen ook van deze liefde kan laten meegenieten.</p>
 <p>Babs.</p>
 </section><section><h1 id="britt-de-vries">Britt de Vries</h1>
-<p><img src="resources/image/algemeen/Britt.jpg" alt="Britt"></p>
+<p><img src="resources/image/algemeen/Pilates.JPG" alt="Britt"></p>
 <p>Britt is afgestudeerd in 2016 aan de opleiding Docent Dans ArtEZ Dansacademie Arnhem.
 Naast het lesgeven bij Babs Balletschool geeft zij ook nog les bij verschillende andere dansscholen. De stijlen waarin Britt lesgeeft binnen Babs Balletschool zijn; Peuterdans, Kleuterballet, Kinderballet, Klassiek voor tieners ,Jazzballet, Moderne dans en Pilates. Naast haar lessen bij Babs Balletschool heeft zij ervaring in het werkveld met Dansproeverij,Barre Workout, Productiegroepen, Spitzen, Dans je fit 50+, leerlijn klassiek, leerlijn modern en Jumps en Tricks op andere scholen. Het dansen en doceren is altijd al een fascinatie van haar geweest. Desondanks heeft zij vóór haar dansopleiding nog een andere opleiding gedaan waar zij ook weg van was namelijk film. Beide zijn een grote passie voor haar dus probeert zij dan ook zo veel mogelijk overlappingen te maken tussen deze twee kunstdisciplines.</p>
 </section><section><h1 id="daphne-wams">Daphne Wams</h1>
