--- a/hoeveel.html
+++ b/hoeveel.html
@@ -59,7 +59,7 @@
 
 <p>De kortingen zijn niet van toepassing op de Korte Cursus.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Ook kunt u gebruikmaken van <em>de Gelrepas</em>. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#97;&#98;&#115;&#64;&#98;&#97;&#98;&#115;&#x62;&#97;&#108;&#x6c;&#x65;&#x74;&#115;&#x63;&#x68;&#111;&#x6f;&#x6c;&#46;&#110;&#108;">&#x62;&#97;&#98;&#115;&#64;&#98;&#97;&#98;&#115;&#x62;&#97;&#108;&#x6c;&#x65;&#x74;&#115;&#x63;&#x68;&#111;&#x6f;&#x6c;&#46;&#110;&#108;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Ook kunt u gebruikmaken van <em>de Gelrepas</em>. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#97;&#98;&#115;&#x40;&#x62;&#x61;&#98;&#x73;&#98;&#97;&#108;&#x6c;&#101;&#x74;&#115;&#x63;&#104;&#111;&#111;&#108;&#x2e;&#110;&#108;">&#x62;&#97;&#98;&#115;&#x40;&#x62;&#x61;&#98;&#x73;&#98;&#97;&#108;&#x6c;&#101;&#x74;&#115;&#x63;&#104;&#111;&#111;&#108;&#x2e;&#110;&#108;</a> </p>
 </section>
         </main>
         <footer>
