--- a/waar.html
+++ b/waar.html
@@ -33,13 +33,13 @@
         </header>
         <main class="">
             <div class="where"><span>waar</span></div>
-            <section><p>Babs Balletschool huurt de dansstudio van <a href="http://theaterdekik.nl/">&#39;Theater de KiK&#39;</a> aan de Dorpsstraat 39 te Elst (OverBetuwe)
-Elst ligt centraal gelegen tussen Nijmegen (Noord) en Arnhem (Schuytgraaf) en theater de KiK is midden in het centrum van Elst op loopafstand treinstation en bushaltes.
-<img src="resources/image/algemeen/Theater%20de%20KiK.JPG" alt="Dansstudio van theater de KiK"></p>
-<p>De KiK is een gebouw waar muziek, dans en theater samenkomen. Er is een theater aan huis. Hier worden diverse voorstellingen gegeven. Ook voor onze eigen dansvoorstellingen maken we gebruik van dit theater.</p>
-<p>In de dansstudio van Theater de KiK worden de danslessen gegeven. Het is een fijne grote dansruimte met spiegelwand, een vaste balletbarre en een eigen kleedruimte met toilet.
+            <section><p>Babs Balletschool huurt de dansstudio van <a href="http://theaterdekik.nl/">&#39;Theater De KiK&#39;</a> aan de Dorpsstraat 39 te Elst (OverBetuwe)
+Elst ligt centraal gelegen tussen Nijmegen (Noord) en Arnhem (Schuytgraaf). Theater De KiK ligt midden in het centrum van Elst op loopafstand treinstation en bushaltes. 
+<img src="resources/image/algemeen/Theater%20de%20KiK.JPG" alt="Dansstudio van theater de KiK"> voorbij de TAKKO linksaf het straatje in naar beneden en volg de bordjes Theater De KiK. </p>
+<p>De KiK is een gebouw waar muziek, dans en theater samenkomen. Er is een theater aan huis. Hier worden diverse voorstellingen gegeven. Ook voor onze eigen dansvoorstellingen/presentaties maken we gebruik van dit theater.</p>
+<p>De danslessen worden in de dansstudio gegeven. Het is een fijne grote dansruimte met spiegelwand, een vaste balletbarre en een eigen kleedruimte met toilet.
 Ook is er een foyer waar u gezellig iets kunt eten en drinken.
-Op het plaatsje voor de ingang van &#39;de KiK&#39; (binnen de hekken) kunt u uw auto of fiets parkeren. Voorbij de garage boxen is ook nog een hele grote parkeerplaats (land van Tap) daar kunt u lang parkeren. </p>
+Op het Cultuurplein voor de ingang van &#39;De KiK&#39; (binnen de hekken) kunt u uw auto of fiets parkeren. Voorbij de garage boxen is ook nog een hele grote parkeerplaats (land van Tap) daar kunt u lang parkeren. </p>
 </section><section><p><img src="resources/image/algemeen/Wegwijzertheaterdekik.jpg" alt="Waar is Babs Balletschool">
 Het gebied rondom de garageboxen is van een andere eigenaar. Gelieve uw auto daar niet te parkeren.</p>
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2460.846161750108!2d5.845503051551977!3d51.91851778828117!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c7a8d36cdbbc59%3A0xf5c7fff3f6da5baf!2sFoundation+Theater+KiK!5e0!3m2!1sen!2snl!4v1532008243089" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
