Update from https://github.com/babsballetschool/website/commit/b9418f3c376cef72ae5c8db34a2555388a68b2f4

--- a/index.html
+++ b/index.html
@@ -33,12 +33,17 @@
         </header>
         <main class="">
             <div class="where"><span>home</span></div>
-            <section><h1 id="seizoen-2122">Seizoen &#39;21/&#39;22</h1>
-<p><img src="resources/image/algemeen/Ballet%20gevorderden.JPG" alt="dansplezier bij Babs&#39;Balletschool"> 
-Gelukkig mogen we weer vertrouwd dansen in de studio.<br>Wil je ook een keer ervaren hoe leuk dansen is?
-Doe een gratis proefles. Instromen is mogelijk. </p>
-<p>Vraag een gratis proefles of informatie aan via <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
-<p>Meteen inschrijven voor een les? <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">inschrijfformulier</a></p>
+            <section><p>#Gratis Proeven Week 16-20 mei &amp; Film
+<img src="resources/image/algemeen/Diner%20Dansant%20cover%203.png" alt="dansplezier bij Babs&#39;Balletschool"> 
+Bij Theater De KiK in Elst kun je de week van 16-20 mei gratis proeflessen volgen bij Babs Balletschool en Muziekschool All Music! Je mag kiezen uit viool, drums, piano, cello, blokfluit, (bas)gitaar, trompet, dwarsfluit, trombone, zang of ballet, jazz, flamenco, moderne dans of werelddans.</p>
+<p>Tot de zomervakantie krijg je daarnaast ook nog 25% korting op de lessen!</p>
+<p>Als je de proefles hebt gedaan kun je bij de infobalie in Theater De KiK een grátis filmticket reserveren voor één van de films op 20 mei:</p>
+<p>16:00 uur – Sing 2
+20:00 uur – In The Heights</p>
+<p>Maak snel een afspraak voor de proefles via mail en ontvang daarna het gratis filmticket!</p>
+<p>Babs Balletschool: <a href="mailto:&#x62;&#x61;&#98;&#115;&#x40;&#98;&#97;&#x62;&#115;&#x62;&#x61;&#108;&#108;&#101;&#x74;&#x73;&#x63;&#x68;&#x6f;&#111;&#108;&#46;&#110;&#108;">&#x62;&#x61;&#98;&#115;&#x40;&#98;&#97;&#x62;&#115;&#x62;&#x61;&#108;&#108;&#101;&#x74;&#x73;&#x63;&#x68;&#x6f;&#111;&#108;&#46;&#110;&#108;</a>
+Muziekschool All Music: <a href="mailto:&#105;&#110;&#102;&#x6f;&#64;&#x6d;&#117;&#122;&#105;&#x65;&#107;&#115;&#99;&#x68;&#111;&#111;&#108;&#x61;&#x6c;&#x6c;&#109;&#x75;&#115;&#x69;&#99;&#x2e;&#x6e;&#x6c;">&#105;&#110;&#102;&#x6f;&#64;&#x6d;&#117;&#122;&#105;&#x65;&#107;&#115;&#99;&#x68;&#111;&#111;&#108;&#x61;&#x6c;&#x6c;&#109;&#x75;&#115;&#x69;&#99;&#x2e;&#x6e;&#x6c;</a></p>
+<p>!cursisten van Babs Balletschool en Muziekschool All Music kunnen ook een gratis filmticket reserveren bij de infobalie.</p>
 </section><section><h1 id="nieuwsbrief">Nieuwsbrief</h1>
 <p><img src="resources/image/algemeen/ballet-krant.jpg" alt="Nieuwsbrief">
 <strong>Nieuwsbrief 2 is op 29-3-22</strong> per mail naar iedereen verstuurd. Heeft u deze niet of niet goed ontvangen? 
@@ -49,9 +54,6 @@ Maandagen 10:00 uur
 De kleinste dansertjes vanaf 2 jaar sluiten het 2e blok Peuterdans af op 25 april. Vanaf 16 mei starten we een laatste blokje Peuterdans voor de zomervakantie (6 x) 
 Ook interesse om met uw kleintje te dansen? doe een gratis proefles, aanmelden via: <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a>
 De oudste peuters stromen door naar het kleuterballet. </p>
-</section><section><h1 id="stuif-es-in">Stuif es in</h1>
-<p><img src="resources/image/algemeen/Stuif%20es%20in%20-%20kopie.png" alt="Stuif es in bij Babs Balletschool">
-van 11 t/m 15 april zijn er &#39;Stuif es in&#39;lessen. Leerlingen mogen dan een vriend/vriendin meenemen om mee te dansen en hen laten ervaren hoe leuk het is om te dansen! </p>
 </section><section><h1 id="project-pilatespilates-bij-babs-balletschool">Project Pilates<img src="resources/image/algemeen/Pilates.JPG" alt="Pilates bij Babs Balletschool"></h1>
 <p>vanaf 14 april Donderdagen 18:30
 Project (6x) Pilates is opgestart en met groot succes! 
