--- a/kleding.html
+++ b/kleding.html
@@ -148,7 +148,7 @@
 <p>(evt. personalized met je eigen naam voor €2,50 extra.)</p>
 <p>evt is ook te bestellen; cropped shirts/legging/hemd.</p>
 <p>te bestellen in zwart in diverse maten.
-bestel via <a href="mailto:&#98;&#x61;&#98;&#x73;&#64;&#98;&#x61;&#x62;&#115;&#98;&#97;&#x6c;&#x6c;&#101;&#116;&#x73;&#x63;&#104;&#x6f;&#111;&#x6c;&#x2e;&#110;&#x6c;">&#98;&#x61;&#98;&#x73;&#64;&#98;&#x61;&#x62;&#115;&#98;&#97;&#x6c;&#x6c;&#101;&#116;&#x73;&#x63;&#104;&#x6f;&#111;&#x6c;&#x2e;&#110;&#x6c;</a> </p>
+bestel via <a href="mailto:&#98;&#97;&#x62;&#115;&#x40;&#x62;&#97;&#98;&#x73;&#98;&#x61;&#x6c;&#108;&#x65;&#x74;&#x73;&#99;&#104;&#x6f;&#111;&#108;&#46;&#110;&#x6c;">&#98;&#97;&#x62;&#115;&#x40;&#x62;&#97;&#98;&#x73;&#98;&#x61;&#x6c;&#108;&#x65;&#x74;&#x73;&#99;&#104;&#x6f;&#111;&#108;&#46;&#110;&#x6c;</a> </p>
 </section><section><h1 id="hoe-maak-ik-een-balletknotje">Hoe maak ik een balletknotje</h1>
 <img class="inline" src="resources/image/algemeen/knotje%20maken%202jpg.jpg" alt="Kledingvoorschrift Babs Balletschool">
 
