--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
         </header>
         <main class="">
             <div class="where"><span>home</span></div>
-            <section><p>#Gratis Proeven Week 16-20 mei &amp; Film
-<img src="resources/image/algemeen/Diner%20Dansant%20cover%203.png" alt="dansplezier bij Babs&#39;Balletschool"> 
+            <section><h1 id="gratis-proeven-week-16-20-mei--film">Gratis Proeven Week 16-20 mei &amp; Film</h1>
+<p><img src="resources/image/algemeen/Diner%20Dansant%20cover%203.png" alt="dansplezier bij Babs&#39;Balletschool"> 
 Bij Theater De KiK in Elst kun je de week van 16-20 mei gratis proeflessen volgen bij Babs Balletschool en Muziekschool All Music! Je mag kiezen uit viool, drums, piano, cello, blokfluit, (bas)gitaar, trompet, dwarsfluit, trombone, zang of ballet, jazz, flamenco, moderne dans of werelddans.</p>
 <p>Tot de zomervakantie krijg je daarnaast ook nog 25% korting op de lessen!</p>
 <p>Als je de proefles hebt gedaan kun je bij de infobalie in Theater De KiK een grátis filmticket reserveren voor één van de films op 20 mei:</p>
-<p>16:00 uur – Sing 2
-20:00 uur – In The Heights</p>
+<p>16:00 uur – Sing 2</p>
+<p>20:00 uur – In The Heights</p>
 <p>Maak snel een afspraak voor de proefles via mail en ontvang daarna het gratis filmticket!</p>
-<p>Babs Balletschool: <a href="mailto:&#x62;&#x61;&#98;&#115;&#x40;&#98;&#97;&#x62;&#115;&#x62;&#x61;&#108;&#108;&#101;&#x74;&#x73;&#x63;&#x68;&#x6f;&#111;&#108;&#46;&#110;&#108;">&#x62;&#x61;&#98;&#115;&#x40;&#98;&#97;&#x62;&#115;&#x62;&#x61;&#108;&#108;&#101;&#x74;&#x73;&#x63;&#x68;&#x6f;&#111;&#108;&#46;&#110;&#108;</a>
-Muziekschool All Music: <a href="mailto:&#105;&#110;&#102;&#x6f;&#64;&#x6d;&#117;&#122;&#105;&#x65;&#107;&#115;&#99;&#x68;&#111;&#111;&#108;&#x61;&#x6c;&#x6c;&#109;&#x75;&#115;&#x69;&#99;&#x2e;&#x6e;&#x6c;">&#105;&#110;&#102;&#x6f;&#64;&#x6d;&#117;&#122;&#105;&#x65;&#107;&#115;&#99;&#x68;&#111;&#111;&#108;&#x61;&#x6c;&#x6c;&#109;&#x75;&#115;&#x69;&#99;&#x2e;&#x6e;&#x6c;</a></p>
-<p>!cursisten van Babs Balletschool en Muziekschool All Music kunnen ook een gratis filmticket reserveren bij de infobalie.</p>
+<p>Babs Balletschool: <a href="mailto:&#x62;&#x61;&#98;&#115;&#64;&#98;&#x61;&#98;&#x73;&#x62;&#x61;&#x6c;&#108;&#x65;&#116;&#x73;&#x63;&#x68;&#111;&#111;&#x6c;&#x2e;&#110;&#108;">&#x62;&#x61;&#98;&#115;&#64;&#98;&#x61;&#98;&#x73;&#x62;&#x61;&#x6c;&#108;&#x65;&#116;&#x73;&#x63;&#x68;&#111;&#111;&#x6c;&#x2e;&#110;&#108;</a>
+Muziekschool All Music: <a href="mailto:&#x69;&#110;&#102;&#111;&#x40;&#109;&#117;&#x7a;&#105;&#101;&#x6b;&#x73;&#99;&#104;&#x6f;&#111;&#108;&#x61;&#x6c;&#x6c;&#x6d;&#117;&#115;&#105;&#x63;&#46;&#110;&#108;">&#x69;&#110;&#102;&#111;&#x40;&#109;&#117;&#x7a;&#105;&#101;&#x6b;&#x73;&#99;&#104;&#x6f;&#111;&#108;&#x61;&#x6c;&#x6c;&#x6d;&#117;&#115;&#105;&#x63;&#46;&#110;&#108;</a></p>
+<p>Leerlingen van Babs Balletschool en Muziekschool All Music kunnen ook een gratis filmticket reserveren bij de infobalie.</p>
 </section><section><h1 id="nieuwsbrief">Nieuwsbrief</h1>
 <p><img src="resources/image/algemeen/ballet-krant.jpg" alt="Nieuwsbrief">
 <strong>Nieuwsbrief 2 is op 29-3-22</strong> per mail naar iedereen verstuurd. Heeft u deze niet of niet goed ontvangen? 
