Update from https://github.com/babsballetschool/website/commit/39edb0a79c0afc109428e6fe73cb4fbb5e13964e

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@ Bij Theater De KiK in Elst kun je de week van 16-20 mei gratis proeflessen volge
 <p>Tot de zomervakantie krijg je daarnaast ook nog 25% korting op de lessen!</p>
 <p>Als je de proefles hebt gedaan kun je bij de infobalie in Theater De KiK een grátis filmticket reserveren voor één van de films op 20 mei:</p>
 <p>16:00 uur – Sing 2</p>
-<p>20:00 uur – In The Heights</p>
+<p>20:00 uur – Dansfilm: In The Heights</p>
 <p>Maak snel een afspraak voor de proefles via mail en ontvang daarna het gratis filmticket!</p>
-<p>Babs Balletschool: <a href="mailto:&#98;&#x61;&#98;&#x73;&#64;&#x62;&#97;&#x62;&#x73;&#x62;&#x61;&#x6c;&#x6c;&#101;&#116;&#115;&#99;&#x68;&#111;&#x6f;&#x6c;&#x2e;&#110;&#x6c;">&#98;&#x61;&#98;&#x73;&#64;&#x62;&#97;&#x62;&#x73;&#x62;&#x61;&#x6c;&#x6c;&#101;&#116;&#115;&#99;&#x68;&#111;&#x6f;&#x6c;&#x2e;&#110;&#x6c;</a>
-Muziekschool All Music: <a href="mailto:&#x69;&#110;&#x66;&#x6f;&#64;&#x6d;&#x75;&#x7a;&#x69;&#101;&#x6b;&#115;&#x63;&#x68;&#x6f;&#x6f;&#x6c;&#x61;&#x6c;&#108;&#x6d;&#x75;&#115;&#x69;&#x63;&#x2e;&#x6e;&#x6c;">&#x69;&#110;&#x66;&#x6f;&#64;&#x6d;&#x75;&#x7a;&#x69;&#101;&#x6b;&#115;&#x63;&#x68;&#x6f;&#x6f;&#x6c;&#x61;&#x6c;&#108;&#x6d;&#x75;&#115;&#x69;&#x63;&#x2e;&#x6e;&#x6c;</a></p>
+<p>Babs Balletschool: <a href="mailto:&#x62;&#x61;&#x62;&#115;&#x40;&#98;&#x61;&#x62;&#115;&#98;&#x61;&#108;&#x6c;&#x65;&#x74;&#x73;&#99;&#104;&#x6f;&#x6f;&#108;&#46;&#x6e;&#108;">&#x62;&#x61;&#x62;&#115;&#x40;&#98;&#x61;&#x62;&#115;&#98;&#x61;&#108;&#x6c;&#x65;&#x74;&#x73;&#99;&#104;&#x6f;&#x6f;&#108;&#46;&#x6e;&#108;</a>
+Muziekschool All Music: <a href="mailto:&#x69;&#110;&#x66;&#x6f;&#x40;&#109;&#x75;&#x7a;&#105;&#x65;&#x6b;&#x73;&#99;&#104;&#111;&#111;&#108;&#x61;&#x6c;&#x6c;&#x6d;&#117;&#115;&#105;&#99;&#46;&#110;&#x6c;">&#x69;&#110;&#x66;&#x6f;&#x40;&#109;&#x75;&#x7a;&#105;&#x65;&#x6b;&#x73;&#99;&#104;&#111;&#111;&#108;&#x61;&#x6c;&#x6c;&#x6d;&#117;&#115;&#105;&#99;&#46;&#110;&#x6c;</a></p>
 <p>Leerlingen van Babs Balletschool en Muziekschool All Music kunnen ook een gratis filmticket reserveren bij de infobalie.</p>
 </section><section><h1 id="nieuwsbrief">Nieuwsbrief</h1>
 <p><img src="resources/image/algemeen/ballet-krant.jpg" alt="Nieuwsbrief">
@@ -59,13 +59,17 @@ De oudste peuters stromen door naar het kleuterballet. </p>
 Project (6x) Pilates is opgestart en met groot succes! 
 een fijne manier om kennis te maken met een training die perfect aansluit op je dansles en je inzicht geeft in je eigen lijf.
 Versterk je core, stabiliteit en flexibiliteit door oefeningen op een mat onder begeleiding van Britt. </p>
-</section><section><h1 id="koningsdag">Koningsdag</h1>
-<p>Koningsdag<img src="resources/image/algemeen/koninginnedag.jpg" alt="Koningsdag bij Babs Balletschool">
-25 t/m 29 april zijn er gewoon lessen, alleen Koningsdag is een vrije dag. Veel plezier allemaal! </p>
-</section><section><h1 id="mei-vakantie-voorjaar-bij-babs-balletschool">Mei vakantie <img src="resources/image/algemeen/meivakantie.jpg" alt="voorjaar bij Babs Balletschool"></h1>
-<p>deze mei vakantie loopt iets anders dan de schoolvakantie!
-van 2 t/m 13 mei is het mei vakantie. 
-de inhaallessen van Britt/Daphne en Sarah gaan in de week van 9 t/m 15 mei wél door. </p>
+</section><section><h1 id="hemelvaart">Hemelvaart</h1>
+<p>Donderdag 26 mei is een vrije dag, dan zijn er geen lessen. 
+Vrijdag 27 mei gaan de lessen wel gewoon door. </p>
+</section><section><h1 id="samenwerking-akwart-experience-elst-en-babs-balletschool">Samenwerking Akwart Experience Elst en Babs Balletschool</h1>
+<p>Samen met instagram museum Akwart in Elst hebben we een leuke presentatie bedacht. In het museum zullen een aantal groepen het publiek verrassen met dansoptredens, daarnaast zijn de kamers van Akwart een beleving om door heen te lopen. Kom ook kijken en reserveer een tijdslot bij het museum: <a href="https://www.akwart.nl/">https://www.akwart.nl/</a></p>
+</section><section><h1 id="inschrijven">Inschrijven</h1>
+<p><img src="resources/image/algemeen/Ballet%20gevorderden.JPG" alt="Inschrijven bij Babs Balletschool">
+De inschrijving is voor een heel dansseizoen, dit loopt ongeveer gelijk met een schooljaar (zie rooster) 
+aan het einde van het dansseizoen loopt de inschrijving automatisch af. 
+Wil je je aanmelden voor de laatste maanden van dit seizoen? klik hier.<a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">inschrijfformulier</a>
+Inschrijven voor seizoen 21-22 kan vanaf 1 juli a.s.</p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs&#39;Balletschool"> 
  Typ deze code in op je toetsenbord:  ⬆⬆⬇⬇⬅➡⬅➡ ba    </p>
