--- a/hoeveel.html
+++ b/hoeveel.html
@@ -59,7 +59,7 @@
 
 <p>De kortingen zijn niet van toepassing op de Korte Cursus.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Ook kunt u gebruikmaken van <em>de Gelrepas</em>. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#97;&#x62;&#115;&#64;&#x62;&#x61;&#98;&#x73;&#x62;&#x61;&#x6c;&#x6c;&#101;&#x74;&#115;&#99;&#x68;&#111;&#111;&#108;&#46;&#x6e;&#108;">&#x62;&#97;&#x62;&#115;&#64;&#x62;&#x61;&#98;&#x73;&#x62;&#x61;&#x6c;&#x6c;&#101;&#x74;&#115;&#99;&#x68;&#111;&#111;&#108;&#46;&#x6e;&#108;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Ook kunt u gebruikmaken van <em>de Gelrepas</em>. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#x61;&#x62;&#115;&#64;&#x62;&#97;&#98;&#115;&#98;&#97;&#108;&#108;&#x65;&#116;&#115;&#99;&#x68;&#x6f;&#x6f;&#x6c;&#x2e;&#x6e;&#x6c;">&#x62;&#x61;&#x62;&#115;&#64;&#x62;&#97;&#98;&#115;&#98;&#97;&#108;&#108;&#x65;&#116;&#115;&#99;&#x68;&#x6f;&#x6f;&#x6c;&#x2e;&#x6e;&#x6c;</a> </p>
 </section>
         </main>
         <footer>
