--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@ Bij Theater De KiK in Elst kun je de week van 16-20 mei gratis proeflessen volge
 <p>16:00 uur – Sing 2</p>
 <p>20:00 uur – Dansfilm: In The Heights</p>
 <p>Maak snel een afspraak voor de proefles via mail en ontvang daarna het gratis filmticket!</p>
-<p>Babs Balletschool: <a href="mailto:&#98;&#97;&#98;&#115;&#x40;&#98;&#x61;&#x62;&#115;&#x62;&#97;&#108;&#x6c;&#101;&#116;&#x73;&#99;&#104;&#111;&#111;&#x6c;&#x2e;&#110;&#108;">&#98;&#97;&#98;&#115;&#x40;&#98;&#x61;&#x62;&#115;&#x62;&#97;&#108;&#x6c;&#101;&#116;&#x73;&#99;&#104;&#111;&#111;&#x6c;&#x2e;&#110;&#108;</a>
-Muziekschool All Music: <a href="mailto:&#105;&#x6e;&#x66;&#x6f;&#x40;&#x6d;&#x75;&#122;&#x69;&#x65;&#x6b;&#115;&#x63;&#104;&#x6f;&#111;&#108;&#x61;&#x6c;&#108;&#x6d;&#117;&#115;&#105;&#99;&#46;&#x6e;&#x6c;">&#105;&#x6e;&#x66;&#x6f;&#x40;&#x6d;&#x75;&#122;&#x69;&#x65;&#x6b;&#115;&#x63;&#104;&#x6f;&#111;&#108;&#x61;&#x6c;&#108;&#x6d;&#117;&#115;&#105;&#99;&#46;&#x6e;&#x6c;</a></p>
+<p>Babs Balletschool: <a href="mailto:&#x62;&#97;&#x62;&#115;&#64;&#x62;&#97;&#x62;&#115;&#x62;&#x61;&#108;&#108;&#x65;&#116;&#x73;&#99;&#104;&#111;&#x6f;&#x6c;&#46;&#x6e;&#108;">&#x62;&#97;&#x62;&#115;&#64;&#x62;&#97;&#x62;&#115;&#x62;&#x61;&#108;&#108;&#x65;&#116;&#x73;&#99;&#104;&#111;&#x6f;&#x6c;&#46;&#x6e;&#108;</a>
+Muziekschool All Music: <a href="mailto:&#x69;&#110;&#102;&#111;&#64;&#x6d;&#117;&#122;&#x69;&#101;&#107;&#x73;&#99;&#104;&#x6f;&#111;&#108;&#97;&#108;&#108;&#109;&#117;&#x73;&#x69;&#x63;&#x2e;&#110;&#x6c;">&#x69;&#110;&#102;&#111;&#64;&#x6d;&#117;&#122;&#x69;&#101;&#107;&#x73;&#99;&#104;&#x6f;&#111;&#108;&#97;&#108;&#108;&#109;&#117;&#x73;&#x69;&#x63;&#x2e;&#110;&#x6c;</a></p>
 <p>Leerlingen van Babs Balletschool en Muziekschool All Music kunnen ook een gratis filmticket reserveren bij de infobalie.</p>
 </section><section><h1 id="nieuwsbrief">Nieuwsbrief</h1>
 <p><img src="resources/image/algemeen/ballet-krant.jpg" alt="Nieuwsbrief">
