Update from https://github.com/babsballetschool/website/commit/2d37958a999a762c412d7012a161ba9639e538f4

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@ Bij Theater De KiK in Elst kun je de week van 16-20 mei gratis proeflessen volge
 <p>16:00 uur – Sing 2</p>
 <p>20:00 uur – Dansfilm: In The Heights</p>
 <p>Maak snel een afspraak voor de proefles via mail en ontvang daarna het gratis filmticket!</p>
-<p>Babs Balletschool: <a href="mailto:&#x62;&#97;&#x62;&#115;&#64;&#x62;&#97;&#x62;&#115;&#x62;&#x61;&#108;&#108;&#x65;&#116;&#x73;&#99;&#104;&#111;&#x6f;&#x6c;&#46;&#x6e;&#108;">&#x62;&#97;&#x62;&#115;&#64;&#x62;&#97;&#x62;&#115;&#x62;&#x61;&#108;&#108;&#x65;&#116;&#x73;&#99;&#104;&#111;&#x6f;&#x6c;&#46;&#x6e;&#108;</a>
-Muziekschool All Music: <a href="mailto:&#x69;&#110;&#102;&#111;&#64;&#x6d;&#117;&#122;&#x69;&#101;&#107;&#x73;&#99;&#104;&#x6f;&#111;&#108;&#97;&#108;&#108;&#109;&#117;&#x73;&#x69;&#x63;&#x2e;&#110;&#x6c;">&#x69;&#110;&#102;&#111;&#64;&#x6d;&#117;&#122;&#x69;&#101;&#107;&#x73;&#99;&#104;&#x6f;&#111;&#108;&#97;&#108;&#108;&#109;&#117;&#x73;&#x69;&#x63;&#x2e;&#110;&#x6c;</a></p>
+<p>Babs Balletschool: <a href="mailto:&#x62;&#x61;&#x62;&#115;&#64;&#x62;&#x61;&#98;&#115;&#98;&#x61;&#108;&#x6c;&#101;&#116;&#x73;&#x63;&#104;&#111;&#111;&#108;&#46;&#110;&#x6c;">&#x62;&#x61;&#x62;&#115;&#64;&#x62;&#x61;&#98;&#115;&#98;&#x61;&#108;&#x6c;&#101;&#116;&#x73;&#x63;&#104;&#111;&#111;&#108;&#46;&#110;&#x6c;</a>
+Muziekschool All Music: <a href="mailto:&#x69;&#110;&#102;&#111;&#x40;&#109;&#x75;&#122;&#x69;&#101;&#107;&#x73;&#x63;&#104;&#111;&#x6f;&#x6c;&#x61;&#108;&#108;&#x6d;&#117;&#x73;&#105;&#99;&#x2e;&#110;&#x6c;">&#x69;&#110;&#102;&#111;&#x40;&#109;&#x75;&#122;&#x69;&#101;&#107;&#x73;&#x63;&#104;&#111;&#x6f;&#x6c;&#x61;&#108;&#108;&#x6d;&#117;&#x73;&#105;&#99;&#x2e;&#110;&#x6c;</a></p>
 <p>Leerlingen van Babs Balletschool en Muziekschool All Music kunnen ook een gratis filmticket reserveren bij de infobalie.</p>
 </section><section><h1 id="nieuwsbrief">Nieuwsbrief</h1>
 <p><img src="resources/image/algemeen/ballet-krant.jpg" alt="Nieuwsbrief">
