--- a/hoeveel.html
+++ b/hoeveel.html
@@ -59,7 +59,7 @@
 
 <p>De kortingen zijn niet van toepassing op de Korte Cursus.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Ook kunt u gebruikmaken van <em>de Gelrepas</em>. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#x61;&#x62;&#x73;&#x40;&#98;&#x61;&#98;&#x73;&#98;&#97;&#x6c;&#108;&#x65;&#x74;&#115;&#x63;&#104;&#x6f;&#x6f;&#108;&#46;&#x6e;&#x6c;">&#x62;&#x61;&#x62;&#x73;&#x40;&#98;&#x61;&#98;&#x73;&#98;&#97;&#x6c;&#108;&#x65;&#x74;&#115;&#x63;&#104;&#x6f;&#x6f;&#108;&#46;&#x6e;&#x6c;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Ook kunt u gebruikmaken van <em>de Gelrepas</em>. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#x61;&#x62;&#115;&#64;&#x62;&#x61;&#98;&#115;&#98;&#x61;&#108;&#x6c;&#101;&#116;&#115;&#99;&#x68;&#x6f;&#x6f;&#108;&#46;&#110;&#108;">&#98;&#x61;&#x62;&#115;&#64;&#x62;&#x61;&#98;&#115;&#98;&#x61;&#108;&#x6c;&#101;&#116;&#115;&#99;&#x68;&#x6f;&#x6f;&#108;&#46;&#110;&#108;</a> </p>
 </section>
         </main>
         <footer>
