Update from https://github.com/babsballetschool/website/commit/42bbdbc2e0b261d829b5b16cc71eb518a53b0435

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@ Bij Theater De KiK in Elst kun je de week van 16-20 mei gratis proeflessen volge
 <p>16:00 uur – Sing 2</p>
 <p>20:00 uur – Dansfilm: In The Heights</p>
 <p>Maak snel een afspraak voor de proefles via mail en ontvang daarna het gratis filmticket!</p>
-<p>Babs Balletschool: <a href="mailto:&#x62;&#x61;&#x62;&#115;&#64;&#x62;&#x61;&#98;&#115;&#98;&#x61;&#108;&#x6c;&#101;&#116;&#x73;&#x63;&#104;&#111;&#111;&#108;&#46;&#110;&#x6c;">&#x62;&#x61;&#x62;&#115;&#64;&#x62;&#x61;&#98;&#115;&#98;&#x61;&#108;&#x6c;&#101;&#116;&#x73;&#x63;&#104;&#111;&#111;&#108;&#46;&#110;&#x6c;</a>
-Muziekschool All Music: <a href="mailto:&#x69;&#110;&#102;&#111;&#x40;&#109;&#x75;&#122;&#x69;&#101;&#107;&#x73;&#x63;&#104;&#111;&#x6f;&#x6c;&#x61;&#108;&#108;&#x6d;&#117;&#x73;&#105;&#99;&#x2e;&#110;&#x6c;">&#x69;&#110;&#102;&#111;&#x40;&#109;&#x75;&#122;&#x69;&#101;&#107;&#x73;&#x63;&#104;&#111;&#x6f;&#x6c;&#x61;&#108;&#108;&#x6d;&#117;&#x73;&#105;&#99;&#x2e;&#110;&#x6c;</a></p>
+<p>Babs Balletschool: <a href="mailto:&#x62;&#x61;&#x62;&#x73;&#64;&#x62;&#x61;&#98;&#115;&#x62;&#x61;&#108;&#108;&#x65;&#x74;&#x73;&#99;&#x68;&#x6f;&#x6f;&#x6c;&#46;&#x6e;&#x6c;">&#x62;&#x61;&#x62;&#x73;&#64;&#x62;&#x61;&#98;&#115;&#x62;&#x61;&#108;&#108;&#x65;&#x74;&#x73;&#99;&#x68;&#x6f;&#x6f;&#x6c;&#46;&#x6e;&#x6c;</a>
+Muziekschool All Music: <a href="mailto:&#x69;&#110;&#x66;&#111;&#x40;&#109;&#117;&#122;&#105;&#101;&#x6b;&#x73;&#99;&#x68;&#x6f;&#x6f;&#108;&#x61;&#x6c;&#108;&#x6d;&#x75;&#115;&#105;&#x63;&#x2e;&#x6e;&#108;">&#x69;&#110;&#x66;&#111;&#x40;&#109;&#117;&#122;&#105;&#101;&#x6b;&#x73;&#99;&#x68;&#x6f;&#x6f;&#108;&#x61;&#x6c;&#108;&#x6d;&#x75;&#115;&#105;&#x63;&#x2e;&#x6e;&#108;</a></p>
 <p>Leerlingen van Babs Balletschool en Muziekschool All Music kunnen ook een gratis filmticket reserveren bij de infobalie.</p>
 </section><section><h1 id="nieuwsbrief">Nieuwsbrief</h1>
 <p><img src="resources/image/algemeen/ballet-krant.jpg" alt="Nieuwsbrief">
@@ -60,10 +60,12 @@ Project (6x) Pilates is opgestart en met groot succes!
 een fijne manier om kennis te maken met een training die perfect aansluit op je dansles en je inzicht geeft in je eigen lijf.
 Versterk je core, stabiliteit en flexibiliteit door oefeningen op een mat onder begeleiding van Britt. </p>
 </section><section><h1 id="hemelvaart">Hemelvaart</h1>
-<p>Donderdag 26 mei is een vrije dag, dan zijn er geen lessen. 
+<p><img src="resources/image/algemeen/meivakantie.jpg/" alt="vrije dag bij Babs Balletschool">
+Donderdag 26 mei is een vrije dag, dan zijn er geen lessen. 
 Vrijdag 27 mei gaan de lessen wel gewoon door. </p>
 </section><section><h1 id="samenwerking-akwart-experience-elst-en-babs-balletschool">Samenwerking Akwart Experience Elst en Babs Balletschool</h1>
-<p>Samen met instagram museum Akwart in Elst hebben we een leuke presentatie bedacht. In het museum zullen een aantal groepen het publiek verrassen met dansoptredens, daarnaast zijn de kamers van Akwart een beleving om door heen te lopen. Kom ook kijken en reserveer een tijdslot bij het museum: <a href="https://www.akwart.nl/">https://www.akwart.nl/</a></p>
+<p><img src="resources/image/tutu's.JPG" alt="Optreden bij Babs Balletschool">
+Samen met instagram museum Akwart in Elst hebben we een leuke presentatie bedacht. In het museum zullen een aantal groepen het publiek verrassen met dansoptredens, daarnaast zijn de kamers van Akwart een beleving om door heen te lopen. Kom ook kijken en reserveer een tijdslot bij het museum: <a href="https://www.akwart.nl/">https://www.akwart.nl/</a></p>
 </section><section><h1 id="inschrijven">Inschrijven</h1>
 <p><img src="resources/image/algemeen/Ballet%20gevorderden.JPG" alt="Inschrijven bij Babs Balletschool">
 De inschrijving is voor een heel dansseizoen, dit loopt ongeveer gelijk met een schooljaar (zie rooster) 
