Update from https://github.com/babsballetschool/website/commit/be28e8d15ff6b73b5dbb04e21ac119f6d16e4651

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@ Bij Theater De KiK in Elst kun je de week van 16-20 mei gratis proeflessen volge
 <p>16:00 uur – Sing 2</p>
 <p>20:00 uur – Dansfilm: In The Heights</p>
 <p>Maak snel een afspraak voor de proefles via mail en ontvang daarna het gratis filmticket!</p>
-<p>Babs Balletschool: <a href="mailto:&#x62;&#97;&#x62;&#115;&#64;&#x62;&#97;&#x62;&#x73;&#x62;&#97;&#x6c;&#108;&#101;&#x74;&#115;&#x63;&#104;&#x6f;&#111;&#108;&#46;&#x6e;&#108;">&#x62;&#97;&#x62;&#115;&#64;&#x62;&#97;&#x62;&#x73;&#x62;&#97;&#x6c;&#108;&#101;&#x74;&#115;&#x63;&#104;&#x6f;&#111;&#108;&#46;&#x6e;&#108;</a>
-Muziekschool All Music: <a href="mailto:&#105;&#110;&#x66;&#x6f;&#x40;&#x6d;&#x75;&#122;&#x69;&#101;&#x6b;&#x73;&#x63;&#x68;&#x6f;&#x6f;&#x6c;&#97;&#108;&#108;&#109;&#x75;&#x73;&#x69;&#x63;&#x2e;&#x6e;&#x6c;">&#105;&#110;&#x66;&#x6f;&#x40;&#x6d;&#x75;&#122;&#x69;&#101;&#x6b;&#x73;&#x63;&#x68;&#x6f;&#x6f;&#x6c;&#97;&#108;&#108;&#109;&#x75;&#x73;&#x69;&#x63;&#x2e;&#x6e;&#x6c;</a></p>
+<p>Babs Balletschool: <a href="mailto:&#98;&#97;&#98;&#115;&#x40;&#x62;&#x61;&#98;&#115;&#98;&#97;&#x6c;&#108;&#101;&#116;&#x73;&#99;&#104;&#111;&#x6f;&#x6c;&#46;&#x6e;&#x6c;">&#98;&#97;&#98;&#115;&#x40;&#x62;&#x61;&#98;&#115;&#98;&#97;&#x6c;&#108;&#101;&#116;&#x73;&#99;&#104;&#111;&#x6f;&#x6c;&#46;&#x6e;&#x6c;</a>
+Muziekschool All Music: <a href="mailto:&#x69;&#x6e;&#102;&#111;&#64;&#x6d;&#x75;&#122;&#x69;&#x65;&#107;&#x73;&#x63;&#104;&#111;&#x6f;&#x6c;&#x61;&#108;&#108;&#109;&#x75;&#115;&#105;&#x63;&#46;&#x6e;&#x6c;">&#x69;&#x6e;&#102;&#111;&#64;&#x6d;&#x75;&#122;&#x69;&#x65;&#107;&#x73;&#x63;&#104;&#111;&#x6f;&#x6c;&#x61;&#108;&#108;&#109;&#x75;&#115;&#105;&#x63;&#46;&#x6e;&#x6c;</a></p>
 <p>Leerlingen van Babs Balletschool en Muziekschool All Music kunnen ook een gratis filmticket reserveren bij de infobalie.</p>
 </section><section><h1 id="nieuwsbrief">Nieuwsbrief</h1>
 <p><img src="resources/image/algemeen/ballet-krant.jpg" alt="Nieuwsbrief">
